force-app/main/default/objects/ProductCustomizationRequest__c/ProductCustomizationRequest__c.object-meta.xml
<CustomObject>
    <label>Product Customization Request</label>
    <nameField>
        <displayFormat>PCR-{0000}</displayFormat>
        <label>Product Customization Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Customization Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>