force-app/main/default/objects/ProductCustomizationRequest__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <inlineHelpText>To be used if you’d like to discuss margin impacts or other reasons you think would be helpful for the approves to make a decision.</inlineHelpText>
    <label>Additional Notes</label>
    <type>TextArea</type>
</CustomField>