force-app/main/default/objects/ProductCustomizationRequest__c/fields/Amount_to_be_Waived__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_be_Waived__c</fullName>
    <label>Amount to be Waived</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>