force-app/main/default/objects/ProductCustomizationRequest__c/fields/ContractValue__c.field-meta.xml
<CustomField>
    <fullName>ContractValue__c</fullName>
    <inlineHelpText>Revenue + Impacting Costs</inlineHelpText>
    <label>Contract Value</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>