force-app/main/default/objects/ProductCustomizationRequest__c/fields/DevelopmentLead__c.field-meta.xml
<CustomField>
    <fullName>DevelopmentLead__c</fullName>
    <label>Development Lead</label>
    <length>50</length>
    <type>Text</type>
</CustomField>