force-app/main/default/objects/ProductCustomizationRequest__c/fields/Expected__c.field-meta.xml
<CustomField>
    <fullName>Expected__c</fullName>
    <inlineHelpText>This is how long PGi thinks it will take to complete, in months, which has been communicated to customer.</inlineHelpText>
    <label>Estimated Months to Complete</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>