force-app/main/default/objects/ProductCustomizationRequest__c/fields/ExpectedStartDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedStartDate__c</fullName>
    <inlineHelpText>This is the date that PGi could possibly start work, not when the customer would like it to be started.</inlineHelpText>
    <label>PGi Target Start Date</label>
    <type>Date</type>
</CustomField>