force-app/main/default/objects/ProductCustomizationRequest__c/fields/If_Other__c.field-meta.xml
<CustomField>
    <fullName>If_Other__c</fullName>
    <inlineHelpText>Please populate with group(s) name if you selected Other from the Groups Effected list.</inlineHelpText>
    <label>If Other</label>
    <type>TextArea</type>
</CustomField>