force-app/main/default/objects/ProductCustomizationRequest__c/fields/Incremental_Personnel_Cost__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Personnel_Cost__c</fullName>
    <label>Incremental Personnel Cost</label>
    <summarizedField>CustomizationLineItem__c.TotalCost__c</summarizedField>
    <summaryFilterItems>
        <field>CustomizationLineItem__c.Area__c</field>
        <operation>equals</operation>
        <value>Incremental Headcount Need</value>
    </summaryFilterItems>
    <summaryForeignKey>CustomizationLineItem__c.ProductCustomizationRequest__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>