force-app/main/default/objects/ProductCustomizationRequest__c/fields/Manager_Approving_Waived_Fees__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approving_Waived_Fees__c</fullName>
    <label>Manager Approving Waived Fees</label>
    <length>50</length>
    <type>Text</type>
</CustomField>