force-app/main/default/objects/ProductCustomizationRequest__c/fields/Oppty_s_ACV__c.field-meta.xml
<CustomField>
    <fullName>Oppty_s_ACV__c</fullName>
    <formula>Related_Opportunity__r.Total_Annual_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppty&apos;s ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>