force-app/main/default/objects/ProductCustomizationRequest__c/fields/Oppty_s_MRR__c.field-meta.xml
<CustomField>
    <fullName>Oppty_s_MRR__c</fullName>
    <formula>Related_Opportunity__r.Total_MRR_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppty&apos;s MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>