force-app/main/default/objects/ProductCustomizationRequest__c/fields/Oppty_s_NRR__c.field-meta.xml
<CustomField>
    <fullName>Oppty_s_NRR__c</fullName>
    <formula>Related_Opportunity__r.Total_NRR_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppty&#39;s NRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>