force-app/main/default/objects/ProductCustomizationRequest__c/fields/Project_Expenses_Waived__c.field-meta.xml
<CustomField>
    <fullName>Project_Expenses_Waived__c</fullName>
    <formula>Total_Project_Expense__c - Oppty_s_NRR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Project Expense - Oppty&#39;s NRR</inlineHelpText>
    <label>Project Expenses Waived</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>