force-app/main/default/objects/ProductCustomizationRequest__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <formula>Product_Engagement_Request__r.Related_Account__c</formula>
    <label>Related Account</label>
    <type>Text</type>
</CustomField>