force-app/main/default/objects/ProductCustomizationRequest__c/fields/RevenuePot__c.field-meta.xml
<CustomField>
    <fullName>RevenuePot__c</fullName>
    <inlineHelpText>In Months</inlineHelpText>
    <label>Revenue Potential</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>