force-app/main/default/objects/ProductCustomizationRequest__c/fields/TimeCode__c.field-meta.xml
<CustomField>
    <fullName>TimeCode__c</fullName>
    <label>Time Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>SalesCustom</fullName>
                <default>true</default>
                <label>SalesCustom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>