force-app/main/default/objects/ProductCustomizationRequest__c/fields/Why_is_date_time_not_satisfacotry__c.field-meta.xml
<CustomField>
    <fullName>Why_is_date_time_not_satisfacotry__c</fullName>
    <label>Why is start date/time not satisfacotry?</label>
    <type>TextArea</type>
</CustomField>