force-app/main/default/objects/ProductCustomizationRequest__c/validationRules/Start_Date_Time_Not_Satisfactory.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Time_Not_Satisfactory</fullName>
    <active>true</active>
    <description>If the Start Date/Time is not satisfactory then the user must advise why.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Expected_Work_End_Date__c, &apos;No&apos;),
ISBLANK(Why_is_date_time_not_satisfacotry__c)  
)</errorConditionFormula>
    <errorDisplayField>Why_is_date_time_not_satisfacotry__c</errorDisplayField>
    <errorMessage>Please advise why the Start Date/Time is not Satisfactory for the customer.</errorMessage>
</ValidationRule>